--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "nodemailer": "^8.0.1",
         "pdf2json": "^4.0.2",
         "pg": "^8.17.2",
+        "radix-ui": "^1.4.3",
         "react": "19.2.3",
         "react-compare-slider": "^3.1.0",
         "react-dom": "19.2.3",
@@ -63,7 +64,8 @@
         "babel-plugin-react-compiler": "1.0.0",
         "eslint": "^9",
         "eslint-config-next": "16.1.4",
-        "prisma": "^6.19.2",
+        "prisma": "^7.3.0",
+        "shadcn": "^3.8.4",
         "tailwindcss": "^4",
         "tw-animate-css": "^1.4.0",
         "typescript": "^5"
